# FaceRecognitionApp

./: CMakeLists.txt  README.md
data/: labels.txt
src/: main.cpp  recognize.cpp  train.cpp
